<resources>
    <string name="app_name">ContactList</string>
    <string name="Contacts">Contacts</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">write a phone number</string>
    <string name="save">Save a contact</string>
    <string name="go_back">Go to back page</string>
    <string name="delete">delete all contacts</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>